# fenix-b2b-prospector

./: .dockerignore  .env.example  .gitignore  CNAME  Caddyfile  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml  run.sh
app/: auth.py  config.py  main.py  scheduler.py
app/api/: admin.py  billing.py  companies.py  erp.py  export.py  ingestion.py  leads.py  opportunities.py  router.py  search.py  solvency.py  stats.py  watchlist.py
app/db/: engine.py  migrate.py  models.py  seed_cnae.py
app/schemas/: act.py  company.py  ingestion.py  opportunity.py  search.py  solvency.py
app/services/: boe_judicial_fetcher.py  boe_subsidies_fetcher.py  borme_fetcher.py  borme_parser.py  cif_enrichment.py  company_service.py  data_normalizer.py  email_service.py  erp_service.py  export_service.py  fts_service.py  geo_sector.py  ingestion_orchestrator.py  opportunity_service.py  pdf_downloader.py  placsp_fetcher.py  revenuecat_service.py  scoring_service.py  stripe_service.py  typesense_service.py  watchlist_service.py  web_enrichment.py
app/utils/: cnae.py  provinces.py  text_clean.py
app/web/: routes.py
app/web/static/: app.js  style.css
app/web/templates/: account.html  admin_users.html  alerts.html  base.html  (+14 more)
data/: cnae_codes.json  provinces.json
deploy/: backup-db.sh  fenix-b2b.service  nginx.conf  setup-server.sh  update.sh
scripts/: add_datos_registrales_column.sql  backfill_borme.py  cleanup_false_companies.py  migrate_sqlite_to_pg.py  seed_db.py  sync_typesense.py
tests/: conftest.py  test_auth.py  test_format.py  test_routes.py
(+9 files in other folders)
